--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.5",
     "@types/node": "^24.9.2",
     "@types/passport-jwt": "^4.0.1",
     "ts-node": "^10.9.2",
