--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.3",
     "tailwind-merge": "^3.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
